--- a/application/templates/includes/nav.html
+++ b/application/templates/includes/nav.html
@@ -3,8 +3,15 @@
             <ul class="nav nav-pills">
                 <li class="nav-item"><a href="{{ url_for('index') }}" class="nav-link {% if index == True %} active{% endif %}">Home</a></li>
                 <li class="nav-item"><a href="{{ url_for('courses') }}" class="nav-link {% if courses == True %} active{% endif %}">Classes</a></li>
+                {% if not session["username"] %}
                 <li class="nav-item"><a href="{{ url_for('register') }}" class="nav-link {% if register == True %} active{% endif %}">Register</a></li>
+                {% endif %}
+                <li class="nav-item"><a href="{{ url_for('enrollment') }}" class="nav-link {% if enrollment == True %} active{% endif %}">Enrollment</a></li>
+                {% if not session["username"] %}
                 <li class="nav-item"><a href="{{ url_for('login') }}" class="nav-link {% if login == True %} active{% endif %}">Login</a></li>
+                {% else %}
+                <li class="nav-item"><a href="{{ url_for('logout') }}" class="nav-link">Logout</a></li>
+                {% endif %}
             </ul>
         </nav>
         <hr style="clear:both">
